--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "electron": "^32.1.2",
     "electron-vite": "^2.3.0",
     "eslint": "^8.57.0",
+    "eslint-plugin-react": "^7.37.1",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.12",
     "postcss": "^8.4.47",
